Fixed downloading from filesystem scheme with network service.

The download manager was using the NetworkDownloadURLLoaderFactoryGetter
for the filesystem scheme which uses a WrapperSharedURLLoaderFactory
for resource requests. This change adds a
FileSystemDownloadURLLoaderFactoryGetter for the filesystem scheme.

Bug: 849059
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: Ia299ad88bac0ff0fa7ae79190e82c5e946d7b053
Reviewed-on: https://chromium-review.googlesource.com/1127148
Commit-Queue: Chris Mumford <cmumford@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Min Qin <qinmin@chromium.org>
Reviewed-by: Mike West <mkwst@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577357}
Former-commit-id: 092314fbfea259e1bf334380483b54864d73461f